# crewos

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  k8crew.env  pyproject.toml
.github/workflows/: ci.yml
crewos/: main.py
crewos/api/: routes.py  schemas.py
crewos/api/middleware/: logging.py  request_id.py
crewos/application/dtos/: run_crew.py
crewos/application/interfaces/: llm_provider.py
crewos/application/use_cases/: run_crew.py
crewos/core/: config.py  dev.py  tenant.py  worker.py
crewos/domain/: enums.py
crewos/domain/entities/: agent.py  crew.py  task.py
crewos/domain/factories/: agent_factory.py  crew_factory.py  task_factory.py
crewos/infrastructure/: celery_app.py  logging.py
crewos/infrastructure/memory/: redis_memory.py
crewos/services/: crew_runner.py
crewos/utils/: retry.py
crewos/workers/: crew_task.py
k8s/base/: configmap.yaml  ingress.yaml  namespace.yaml  secret.yaml
k8s/base/api/: deployment.yaml  service.yaml
k8s/base/ollama/: deployment.yaml  service.yaml
k8s/base/redis/: deployment.yaml  service.yaml
k8s/base/worker/: deployment.yaml
k8s/tenants/: tenant-a.yaml  tenant-b.yaml
k8s/workers/: worker-deployment.yaml
tests/: test_api_routes.py  test_crew_factory.py  test_redis_memory.py  test_tenant_context.py
