[tool.poetry]
name = "crewai-platform"
version = "0.1.0"
description = "Multi-tenant CrewAI execution platform with Redis, Celery, Docker and Kubernetes"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "crewos" }]

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
setuptools = "^68.0.0"

# --- Core ---
crewai = "^0.28.0"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }

# --- Async / Workers ---
celery = "^5.3.6"
redis = "^5.0.1"

# --- Data & Validation ---
pydantic = "^2.6.0"
pydantic-settings = "^2.2.1"

# --- Observability / Utils ---
python-dotenv = "^1.0.1"
tenacity = "^8.2.3"
structlog = "^24.1.0"
ipdb = "^0.13.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^5.0.0"
black = "^24.1.0"
isort = "^5.13.2"
mypy = "^1.8.0"

[tool.poetry.scripts]
dev = "crewos.core.dev:main"
worker = "crewos.core.worker:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: pure unit tests with no external deps",
    "integration: tests requiring Redis or other services",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["crewos"]
omit = [
    "crewos/__pycache__/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]
show_missing = true
skip_covered = false